[package]
name = "raur-ext"
version = "2.0.1"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"

description = "Extension to raur, giving caching and request splitting"
homepage = "http://github.com/Morganamilo/raur-ext"
repository = "http://github.com/Morganamilo/raur-ext"
documentation = "https://docs.rs/raur-ext"
license = "GPL-3.0"
keywords = ["archlinux", "pkgbuild", "arch", "aur", "raur"]

[features]
rustls = ["raur/rustls"]
default = ["raur/default"]

[dependencies]
raur = { version = "3.0.1", default-features = false }

